[package]
name = "herculoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
acceleration = { path = "../herculoid/src/acceleration/acceleration"}
collision = { path = "../herculoid/src/collision/collision"}
physics_manager = { path = "../herculoid/src/physicsManager/physics-manager"}